--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.Myown</groupId>
-    <artifactId>Durgesh_TechBlog_Project</artifactId>
+    <artifactId>TechBlog_Project</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Durgesh_TechBlog_Project</name>
     <packaging>war</packaging>
